PROJECT(packetstream)

SET(PACKETSTREAM_SOVER 0)
SET(PACKETSTREAM_VER 0.1.3)

IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release")
ENDIF (NOT CMAKE_BUILD_TYPE)

SUBDIRS(src)

OPTION(PACKETSTREAM_EXAMPLES
       "Build examples"
       OFF)

IF (PACKETSTREAM_EXAMPLES)
  SUBDIRS(examples)
ENDIF (PACKETSTREAM_EXAMPLES)
